# Rust4D

./: AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  flake.nix
.agents/skills/4d-conventions/: SKILL.md
.agents/skills/4d-geometry/: SKILL.md
.agents/skills/headless-visual-verification/: SKILL.md
.agents/skills/production-readiness/: SKILL.md
.agents/skills/slice-invariant/: SKILL.md
.github/workflows/: ci.yml
crates/rust4d_audio/: Cargo.toml
crates/rust4d_audio/src/: bus.rs  lib.rs  sound.rs  spatial.rs
crates/rust4d_core/: Cargo.toml
crates/rust4d_core/src/: asset_cache.rs  asset_error.rs  components.rs  entity.rs  lib.rs  scene.rs  scene_loader.rs  scene_manager.rs  scene_transition.rs  scene_validator.rs  shapes.rs  transform.rs  world.rs
crates/rust4d_core/tests/: physics_integration.rs
crates/rust4d_game/: Cargo.toml
crates/rust4d_game/src/: character_controller.rs  events.rs  fsm.rs  lib.rs  scene_helpers.rs  tween.rs
crates/rust4d_input/src/: action_map.rs  camera_controller.rs  lib.rs
crates/rust4d_math/src/: hyperplane.rs  interpolation.rs  lib.rs  mat4.rs  mesh4d.rs  ray.rs  rotor4.rs  tesseract.rs  vec4.rs
crates/rust4d_math/src/primitives/: curved.rs  extrude.rs  mod.rs  polytopes.rs
crates/rust4d_math/tests/: interpolation_external.rs
crates/rust4d_physics/: Cargo.toml
crates/rust4d_physics/src/: body.rs  collision.rs  lib.rs  material.rs  raycast.rs  shapes.rs  spatial.rs  world.rs
crates/rust4d_physics/tests/: edge_cases.rs
crates/rust4d_render/: Cargo.toml
crates/rust4d_render/src/: camera4d.rs  lib.rs  renderable.rs
crates/rust4d_render/src/egui_overlay/: context.rs  mod.rs  renderer.rs
crates/rust4d_render/src/particle/: emitter.rs  mod.rs  system.rs  types.rs
crates/rust4d_render/src/pipeline/: lookup_tables.rs  mod.rs  render_pipeline.rs  slice_pipeline.rs  types.rs
crates/rust4d_render/src/shaders/: render.wgsl  slice_tetra.wgsl
crates/rust4d_render/src/sprite/: batch.rs  mod.rs  types.rs
crates/rust4d_scripting/: Cargo.toml
crates/rust4d_scripting/src/: error.rs  hot_reload.rs  lib.rs  lifecycle.rs  loader.rs  vm.rs
crates/rust4d_scripting/src/bindings/: audio.rs  ecs.rs  hud.rs  input.rs  math.rs  mod.rs  physics.rs
crates/rust4d_scripting/tests/: sandbox_escape.rs
docs/: 4d-math.md  README.md  developer-guide.md  getting-started.md  shapes.md  user-guide.md
examples/: 01_hello_tesseract.rs  02_multiple_shapes.rs  03_physics_demo.rs  04_camera_exploration.rs  05_audio_demo.rs  README.md  headless_protocol.rs  ron_preview.rs  shape_showcase.rs
examples/assets/: preview_hypersphere.ron  preview_tesseract.ron
scenes/: default.ron  gallery.ron  test_chamber.ron
src/: config.rs  lib.rs  main.rs
src/input/: input_mapper.rs  mod.rs
src/systems/: geometry.rs  mod.rs  render.rs  simulation.rs  window.rs
tests/: gallery_scene.rs  game_integration.rs  slice_invariant.rs
