[workspace]
resolver = "2"
members = [
    "crates/rust4d_math",
    "crates/rust4d_core",
    "crates/rust4d_render",
    "crates/rust4d_input",
    "crates/rust4d_physics",
    "crates/rust4d_game",
    "crates/rust4d_scripting",
    "crates/rust4d_audio",
]

[workspace.dependencies]
wgpu = "24"
winit = "0.30"
bytemuck = { version = "1.14", features = ["derive"] }
pollster = "0.4"
env_logger = "0.11"
log = "0.4"
slotmap = "1.0"
hecs = "0.10"
bitflags = "2.4"
serde = { version = "1.0", features = ["derive"] }
figment = { version = "0.10", features = ["toml", "env"] }
ron = "0.8"

# Internal crates
rust4d_math = { path = "crates/rust4d_math" }
rust4d_core = { path = "crates/rust4d_core" }
rust4d_render = { path = "crates/rust4d_render" }
rust4d_input = { path = "crates/rust4d_input" }
rust4d_physics = { path = "crates/rust4d_physics" }
rust4d_game = { path = "crates/rust4d_game" }
rust4d_scripting = { path = "crates/rust4d_scripting" }
rust4d_audio = { path = "crates/rust4d_audio" }

[package]
name = "rust4d"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust4d"
path = "src/lib.rs"

[[bin]]
name = "rust4d"
path = "src/main.rs"

[dependencies]
rust4d_math.workspace = true
rust4d_core.workspace = true
rust4d_render.workspace = true
rust4d_input.workspace = true
rust4d_physics.workspace = true
rust4d_game.workspace = true
wgpu.workspace = true
winit.workspace = true
pollster.workspace = true
env_logger.workspace = true
log.workspace = true
serde.workspace = true
figment.workspace = true

[dev-dependencies]
toml = "0.8"
serial_test = "3.0"
ron.workspace = true
rust4d_audio.workspace = true

[[example]]
name = "01_hello_tesseract"
path = "examples/01_hello_tesseract.rs"

[[example]]
name = "02_multiple_shapes"
path = "examples/02_multiple_shapes.rs"

[[example]]
name = "03_physics_demo"
path = "examples/03_physics_demo.rs"

[[example]]
name = "04_camera_exploration"
path = "examples/04_camera_exploration.rs"

[[example]]
name = "ron_preview"
path = "examples/ron_preview.rs"

[[example]]
name = "05_audio_demo"
path = "examples/05_audio_demo.rs"
