[package]
name = "rust4d_core"
version = "0.1.0"
edition = "2021"
description = "Core types for the Rust4D engine: Transform4D, Entity, World"

[dependencies]
rust4d_math.workspace = true
rust4d_physics.workspace = true
slotmap.workspace = true
hecs.workspace = true
bitflags.workspace = true
serde = { version = "1.0", features = ["derive"] }
ron = "0.8"
log = "0.4"
