[package]
name = "rust4d_render"
version = "0.1.0"
edition = "2021"

[dependencies]
rust4d_math.workspace = true
rust4d_core.workspace = true
rust4d_input.workspace = true
wgpu.workspace = true
winit.workspace = true
bytemuck.workspace = true
log.workspace = true

# egui for HUD overlay
egui = "0.31"
egui-wgpu = "0.31"
egui-winit = { version = "0.31", optional = true }

[features]
default = []
egui-winit = ["dep:egui-winit"]
