[package]
name = "rust4d_scripting"
version = "0.1.0"
edition = "2021"

[dependencies]
mlua = { version = "0.10", features = ["lua54", "vendored", "send"] }
log = "0.4"
rust4d_core = { path = "../rust4d_core" }
rust4d_math = { path = "../rust4d_math" }
notify = { version = "7.0", optional = true }

[features]
default = []
hot-reload = ["notify"]

[dev-dependencies]
env_logger = "0.11"
tempfile = "3"
